crates/tjuae-providers/src/snapshots/tjuae_providers__openai__tests__openai_field_controls_disabled.snap
---
source: crates/tjuae-providers/src/openai.rs
expression: provider.build_request_body(&request)
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true
}
